More clean up after conversion from Mirah